--- a/package.json
+++ b/package.json
@@ -11,9 +11,16 @@
     "@types/node": "^16.18.126",
     "@types/react": "^19.2.13",
     "@types/react-dom": "^19.2.3",
+    "axios": "^1.13.4",
+    "bootstrap": "^5.3.6",
     "react": "^19.2.4",
+    "react-bootstrap": "^2.10.7",
     "react-dom": "^19.2.4",
+    "react-router-dom": "^7.5.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.15.0",
+    "react-toastify": "^11.0.3",
+    "sass": "^1.83.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
